--- a/screwdriver.yaml
+++ b/screwdriver.yaml
@@ -8,3 +8,9 @@ jobs:
     steps:
       - install_prerequisites: npm install -g screwdriver-template-main
       - validate_template: pipeline-template-validate
+
+  publish_template:
+    requires: [validate_template]
+    steps:
+      - install_prerequisites: npm install -g screwdriver-template-main
+      - publish: pipeline-template-publish
